# notion-chakra-mcp

./: .env.template  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_list_databases.py  test_main_tool.py  test_notion_runtime.py
src/: .env.template  __init__.py  block_tools.py  common_utils.py  main.py  notion_tools.py  okr_tools.py  project_tools.py  schema_tools.py  setup_tools.py  task_tools.py  telemetry.py
src/models/: __init__.py  notion.py
src/schemas/: __init__.py  schema_manager.py
tests/: test_notion_runtime.py
