[project]
name = "notion-chakra-mcp"
version = "0.1.0"
description = "MCP server for Notion integration"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.2.0",
    "notion-client==2.0.0",
    "python-dotenv==1.0.0",
    "tenacity==8.2.3",
    "fastapi==0.109.0",
    "uvicorn==0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.6.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"] 